--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
                         <div class="skills-data">
                             <div class="skills-titles">
-                                <h3 class="skills-name">React</h3>
+                                <h3 class="skills-name">Bootstrap</h3>
                                 <span class="skills-number">80%</span>
                             </div>
 
